test/fixtures/themes/001-deprecations/invalid/index.hbs
{{post.image}}
{{@blog.cover}}

{{tag.image}}⁠⁠

{{> mypartial}}
